--- a/apps/about/index.html
+++ b/apps/about/index.html
@@ -127,12 +127,14 @@ alternate_urls:
                             <li style="color:#fff8e1">Arthur</li> <!--30$ 25/08/10-->
                             <li style="color:#ad7326">안*현</li> <!--30000 25/09/10-->
                             <li>ue</li> <!--15$ 25/09/09-->
+                            <li>Skizor Kurogane</li><!--15$ 25/12/20-->
                             <li>kai</li> <!--9$ 25/08/22-->
                             <li>김*환</li> <!--9$ 25/07/18-->
                             <li>임*훈</li><!--10000 25/07/06-->
                             <li>김*현</li> <!--10000 25/05/18-->
                             <li>카미유</li> <!--10000 25/07/18-->
                             <li>서*일</li> <!--10000 25/09/19-->
+                            <li>Xylex(SEA)</li> <!--6$ 25/11-->
                             <li>ochette</li> <!--6$ 25/06/18-->
                             <li>Sages</li> <!--6$ 25/09/06-->
                             <li>Nerecky</li> <!--3$ 25/09/10-->
