--- a/character/index.html
+++ b/character/index.html
@@ -130,6 +130,10 @@ redirect_from:
                         <input type="checkbox" name="position" value="해명">
                         <img src="{{ site.baseurl }}/assets/img/character-cards/직업_해명.png" alt="해명">
                     </label>
+                    <label>
+                        <input type="checkbox" name="position" value="자율">
+                        <img src="{{ site.baseurl }}/assets/img/character-cards/직업_자율.png" alt="자율">
+                    </label>
                 </div>
             </div>
 
