--- a/apps/article/index.html
+++ b/apps/article/index.html
@@ -49,7 +49,7 @@ custom_css: article
 
     <!-- 외부 가이드 섹션 -->
     <div class="external-guides"
-        style="margin: 40px 20px 20px 20px; background: #3d3030; border-radius: 12px; padding: 20px;">
+        style="margin: 40px 20px 20px 20px; background: var(--card-background); border-radius: 12px; padding: 20px;">
         <h2 class="external-guides-title" data-kr="외부 링크" data-en="External Links" data-jp="外部リンク"
             style="font-size: 1.25rem; margin: 0 0 20px 0; color: #cdcdcd;">
             외부 링크
@@ -63,7 +63,7 @@ custom_css: article
                 data-kr-url="https://docs.google.com/spreadsheets/d/1L47W0r5nHpAlU_qUY3HuslcqBRS78tHC682eFCXiftM"
                 data-en-url="https://docs.google.com/spreadsheets/d/1gbV0OY_6K579nxUa5FuDcOkbxDc1VJD5ejjq3dkuELs"
                 data-jp-url="https://docs.google.com/spreadsheets/d/1gbV0OY_6K579nxUa5FuDcOkbxDc1VJD5ejjq3dkuELs"
-                style="display: block; padding: 20px; border-radius: 8px; text-decoration: none; color: inherit; transition: all 0.3s ease; background: rgba(0, 0, 0, 0.2);">
+                style="display: block; padding: 20px; border-radius: 8px; text-decoration: none; color: inherit; transition: all 0.3s ease; background: rgba(255, 255, 255, 0.05);">
                 <div class="external-guide-content">
                     <h3 class="external-guide-title" data-kr="협력자 시트↗" data-en="Persona5:The Phantom X Synergy↗"
                         data-jp="ペルソナ5:ザ・ファントム X シナジー↗" style="font-size: 1.3rem; margin: 0 0 10px 0; color: #bababa;">
@@ -82,7 +82,7 @@ custom_css: article
             <a href="https://iant.kr/code/?region=kr" target="_blank" rel="noopener noreferrer"
                 class="external-guide-card" data-kr-url="https://iant.kr/code/?region=kr"
                 data-en-url="https://iant.kr/code/?region=en" data-jp-url="https://iant.kr/code/?region=jp"
-                style="display: block; padding: 20px; border-radius: 8px; text-decoration: none; color: inherit; transition: all 0.3s ease; background: rgba(0, 0, 0, 0.2);">
+                style="display: block; padding: 20px; border-radius: 8px; text-decoration: none; color: inherit; transition: all 0.3s ease; background: rgba(255, 255, 255, 0.05);">
                 <div class="external-guide-content">
                     <h3 class="external-guide-title" data-kr="실시간 코드↗" data-en="Redeem Code↗" data-jp="交換コード↗"
                         style="font-size: 1.3rem; margin: 0 0 10px 0; color: #bababa;">
