--- a/apps/material-calc/index.html
+++ b/apps/material-calc/index.html
@@ -52,7 +52,7 @@ description: P5X 캐릭터 육성 재료 계산기 (레벨/무기/스킬/심상)
             <label style="display:flex;align-items:center;gap:6px;color:rgba(255,255,255,.8);font-size:14px;">
                 <span id="sortLabel" data-lang-key="sort">정렬</span>
                 <select id="plannerSortSelect"
-                    style="background:#1f120e;border:1px solid rgba(255,255,255,.2);color:#fff;padding:6px 8px;border-radius:4px;">
+                    style="background:var(--card-background);border: none;color:#ffffffeb;padding:6px 8px;border-radius:4px;">
                     <option value="release_asc" data-lang-key="sort.releaseAsc">출시 순 ↑</option>
                     <option value="release_desc" data-lang-key="sort.releaseDesc">출시 순 ↓</option>
                     <option value="name_asc" data-lang-key="sort.nameAsc">이름 순 ↑</option>
