--- a/apps/pull-tracker/url-guide.html
+++ b/apps/pull-tracker/url-guide.html
@@ -471,7 +471,7 @@ description: "가챠 기록 URL을 얻는 방법 안내"
   .guide-card {
     position: relative;
     background: #000000a9;
-    border: 1px solid rgba(255, 255, 255, .12);
+    border: 1px solid rgba(255, 255, 255, 0.12);
     border-radius: 12px;
     padding: 10px 12px 12px 48px;
     width: 100%;
