--- a/character/character.html
+++ b/character/character.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 custom_css: [cha_detail, cha_detail_img, tactic-posts, tactic-share]
-custom_js: [character/cha_detail, tooltip, detail/dot-carousel, marked.min, character/cha_stats,
+custom_js: [character/cha_video, character/cha_detail, tooltip, detail/dot-carousel, marked.min, character/cha_stats,
 character/character-i18n, character/helpmodal]
 custom_data: [characters/characters.js, revelations/revelations.js,
 tooltip.js, wonder/weapons.js]
@@ -64,7 +64,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
             </div>
             <div class="name-section">
                 <div class="name-row">
-                    <h1 class="character-name">Character Name</h1>
+                    <h1 class="character-name p5-layer-box">Character Name</h1>
                     <div class="icon-group">
                         <div class="element-icons"></div>
                         <div class="position-icon"></div>
