--- a/apps/persona/index.html
+++ b/apps/persona/index.html
@@ -434,22 +434,26 @@ jp: /persona/?lang=jp
         @media(min-width:1440px) {
             .persona-detail-container {
                 padding: 0px;
-                background: rgba(0, 0, 0, 0.5)
+                background: var(--card-background)
             }
 
             .persona-detail-container.active {
                 padding: 20px;
-                background: rgba(0, 0, 0, 0.3)
+                background: var(--card-background);
+                border-bottom: solid 3px rgb(115 0 0);
             }
         }
 
         @media(max-width:1440px) {
             .persona-detail-container {
                 padding: 20px 0 0 0px;
+                background: var(--card-background)
             }
 
             .persona-detail-container.active {
                 padding: 20px 10px 10px 10px;
+                background: var(--card-background);
+                border-bottom: solid 3px rgb(115 0 0);
             }
         }
 
@@ -527,7 +531,7 @@ jp: /persona/?lang=jp
         /* Acquisition (획득처) section */
         .persona-acq-info {
             padding: 12px 16px 12px 16px;
-            background: rgba(255, 255, 255, 0.04);
+            background: rgba(0, 0, 0, 0.15);
             border-radius: 8px;
             display: flex;
             gap: 16px;
