--- a/character/index.html
+++ b/character/index.html
@@ -706,7 +706,7 @@ redirect_from:
         if (p3Filter) {
             const p3Label = p3Filter.closest('label');
             if (shouldShowP3Filter()) {
-                p3Label.style.display = 'inline-block';
+                p3Label.style.display = 'flex';
             } else {
                 p3Label.style.display = 'none';
             }
