--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@ jp: /?lang=jp
     <div class="separator-line"></div>
     <div class="popular-content" data-max-count="10">
         <div class="posts-header">
-            <h2><a href="/character" style="text-decoration: none; color: inherit;" id="popular-characters-title">인기 괴도</a></h2>
-            <a href="/character" class="show-more-characters-btn" style="text-decoration: none; color: inherit;" id="show-more-characters-btn"><img src="{{ site.baseurl }}/assets/img/home/news_more2.png" alt="logo" style="
+            <h2><a href="/character/" style="text-decoration: none; color: inherit;" id="popular-characters-title">인기 괴도</a></h2>
+            <a href="/character/" class="show-more-characters-btn" style="text-decoration: none; color: inherit;" id="show-more-characters-btn"><img src="{{ site.baseurl }}/assets/img/home/news_more2.png" alt="logo" style="
                 max-height: 11px; opacity: 0.75;
             "></a>
         </div>
