--- a/tier/position-tier.html
+++ b/tier/position-tier.html
@@ -226,6 +226,7 @@ description: P5X 랭커의 티어 리스트를 확인하세요.
                     <li>Written with competitive content in mind, tiers may continuously change with version updates.
                     </li>
                     <li>Global servers may differ from KR tiers because characters are buffed.</li>
+                    <li>J&C KR Tier is a tier with Mindscape Core(V4.7) effect applied in Korea servers.</li>
                 </ul>
             </div>
             <!-- Japanese -->
@@ -234,6 +235,7 @@ description: P5X 랭커의 티어 리스트를 확인하세요.
                     <li>LV80、すべてのスキルレベルなど、意識（Awareness）を除くすべての値が基本的に設定されている場合を指します。</li>
                     <li>競争コンテンツを中心に作成されており、バージョンアップデートによってティアは継続的に変動する可能性があります。</li>
                     <li>グローバルサーバーは怪盗がバフされているため、KRティアとは異なる場合があります。</li>
+                    <li>J&C KRティアは、韓国サーバーでイメジャリー・コア(V4.7)効果が適用されたティアです。</li>
                 </ul>
             </div>
         </div>
