--- a/tier/position-tier.html
+++ b/tier/position-tier.html
@@ -217,6 +217,7 @@ description: P5X 랭커의 티어 리스트를 확인하세요.
                 <ul>
                     <li>LV80, 모든 스킬 레벨 등 의식을 제외한 모든 값이 기본적으로 세팅돼있는 경우를 말합니다.</li>
                     <li>경쟁 콘텐츠를 중심으로 작성됐으며, 버전 업데이트에 따라 티어는 지속적으로 변동될 수 있습니다.</li>
+                    <li>J&C는 심상 코어를 모두 활성화한 기준으로 작성돼있습니다.</li>
                 </ul>
             </div>
             <!-- English -->
@@ -226,7 +227,7 @@ description: P5X 랭커의 티어 리스트를 확인하세요.
                     <li>Written with competitive content in mind, tiers may continuously change with version updates.
                     </li>
                     <li>Global servers may differ from KR tiers because characters are buffed.</li>
-                    <li>J&C KR Tier is a tier with Mindscape Core(V4.7) effect applied in Korea servers.</li>
+                    <li>J&C was created based solely on A1. J&C KR Tier is a tier with Mindscape Core(V4.7) effect applied in Korea servers.</li>
                 </ul>
             </div>
             <!-- Japanese -->
@@ -235,7 +236,7 @@ description: P5X 랭커의 티어 리스트를 확인하세요.
                     <li>LV80、すべてのスキルレベルなど、意識（Awareness）を除くすべての値が基本的に設定されている場合を指します。</li>
                     <li>競争コンテンツを中心に作成されており、バージョンアップデートによってティアは継続的に変動する可能性があります。</li>
                     <li>グローバルサーバーは怪盗がバフされているため、KRティアとは異なる場合があります。</li>
-                    <li>J&C KRティアは、韓国サーバーでイメジャリー・コア(V4.7)効果が適用されたティアです。</li>
+                    <li>J&Cは凸1を基準としてのみ作成されました。J&C KRティアは、韓国サーバーでイメジャリー・コア(V4.7)効果が適用されたティアです。</li>
                 </ul>
             </div>
         </div>
