--- a/apps/about/index.html
+++ b/apps/about/index.html
@@ -131,6 +131,7 @@ alternate_urls:
                             <li style="color:#ffd34e; font-weight:700;">시아</li> <!--99$ 25/07/10-->
                             <li style="color:#fff8e1">Arthur</li> <!--30$ 25/08/10-->
                             <li style="color:#ad7326">안*현</li> <!--30000 25/09/10-->
+                            <li>이*현</li> <!--30000 26/01/02-->
                             <li>ue</li> <!--15$ 25/09/09-->
                             <li>Skizor Kurogane</li><!--15$ 25/12/20-->
                             <li>kai</li> <!--9$ 25/08/22-->
@@ -142,6 +143,9 @@ alternate_urls:
                             <li>Xylex(SEA)</li> <!--6$ 25/11-->
                             <li>ochette</li> <!--6$ 25/06/18-->
                             <li>Sages</li> <!--6$ 25/09/06-->
+                            <li>Denys</li> <!--6$ 25/12/27-->
+                            <li>Matsu</li> <!--6$ 25/12/31-->
+                            <li>Viiun</li> <!--6$ 26/01/02-->
                             <li>Nerecky</li> <!--3$ 25/09/10-->
                             <li>Main</li> <!--3$ 25/10/18-->
                             <li>Ian</li><!--3000 25/06/20-->
