--- a/apps/about/index.html
+++ b/apps/about/index.html
@@ -119,7 +119,7 @@ alternate_urls:
                     <div class="supporter-tier">
                         <h4>Special Thanks</h4>
                         <ul>
-                            <li>Data/Pull Tracker : Iant</li>
+                            <li style="color:#ffd34e; font-weight:700;">Data/Pull Tracker : Iant</li>
                             <li>Translation : RedHarv (EN)</li>
                             <li>Translation : Em (EN)</li>
                             <li>Translation : kai (JP)</li>
@@ -146,6 +146,7 @@ alternate_urls:
                             <li>Denys</li> <!--6$ 25/12/27-->
                             <li>Matsu</li> <!--6$ 25/12/31-->
                             <li>Viiun</li> <!--6$ 26/01/02-->
+                            <li>Nova</li> <!--3$ 26/01/07-->
                             <li>Nerecky</li> <!--3$ 25/09/10-->
                             <li>Main</li> <!--3$ 25/10/18-->
                             <li>Ian</li><!--3000 25/06/20-->
