--- a/apps/defense-calc/index.html
+++ b/apps/defense-calc/index.html
@@ -75,8 +75,10 @@ redirect_from:
                     </div>
                     <div class="input-group">
                         <label id="baseFinalDamageLabel">· 기본 최종 대미지 배수:</label>
-                        <div class="inline-input">
+                        <div class="inline-input damage-multiplier-display">
                             <span id="noDefReduce">-</span>
+                            <span id="damageArrow" style="display:none;"> → </span>
+                            <span id="withDefReduce" style="display:none;">-</span>
                         </div>
                     </div>
                 </div>
