--- a/apps/gallery/index.html
+++ b/apps/gallery/index.html
@@ -1,8 +1,7 @@
 ---
 layout: default
-permalink: /apps/gallery/
+permalink: /gallery/
 redirect_from:
-  - /gallery/
   - /kr/gallery/
   - /kr/gallery/index.html
 language: kr
