--- a/character/index.html
+++ b/character/index.html
@@ -1044,7 +1044,8 @@ redirect_from:
             '백타뉴': '코토네 몽타뉴·백조',
             '3주': '유키 마코토',
             '센세': '카타야마 쿠미',
-            '선생': '카타야마 쿠미'
+            '선생': '카타야마 쿠미',
+            'fuuka': '야마기시 후카'
         };
 
         // 검색 기능 구현
